[package]
name = "ichor"
version = "0.1.0"
description = "An API wrapper for itch.io"
homepage = "https://github.com/kotx/ichor"
repository = "https://github.com/kotx/ichor.git"
keywords = ["itch"]
categories = ["web-programming::http-client"]
license = "Zlib"
edition = "2021"

[dependencies]
reqwest = { version = "0.11.6", default-features = false, features = [
    "default-tls",
    "json",
] }
serde = { version = "1.0.130", features = ["derive"] }

[dev-dependencies]
ctor = "0.1.21"
dotenv = "0.15.0"
tokio-test = "0.4.2"
